--- a/payment.css
+++ b/payment.css
@@ -104,11 +104,30 @@ body {
   #paym{
     border:120%;
   }
-  @media (max-width: 800px) {
+  /* @media (max-width: 800px) {
     .row {
       flex-direction: column-reverse;
     }
     .col-25 {
       margin-bottom: 20px;
     }
-  }
+  } */
+
+  @media (max-width: 768px) {
+    .row {
+        width: 100%;
+        padding-left: 0;
+        margin: 0;
+    }
+
+    .col-25,
+    .col-50,
+    .col-75 {
+        -ms-flex: 100%;
+        flex: 100%;
+    }
+
+    .btn {
+        margin-left: 0;
+    }
+}
