--- a/style.css
+++ b/style.css
@@ -1,15 +1,3 @@
-/* .nav{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 18px 100px;
-    transition: 0.5s linear;
-} */
 body{
     background-color: #371f1f;
 }
@@ -18,7 +6,7 @@ body{
         background-image: url(img/coffee4.cms);
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: center top -11em;
+        background-position: center top -12em;
     
     }
 
@@ -28,7 +16,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 2px;
-    background-color: #240f0f;
+    background-color: #310202;
     color: aliceblue;
 }
 
@@ -44,6 +32,7 @@ header {
     margin: 0;
     padding: 0;
     gap: 35%;
+    color: #fff;
 }
 
 .nav li {
@@ -107,7 +96,7 @@ header {
     
     .footer {
         background-color: #240f0f;
-        padding: 2px;
+        padding: 3px;
         display: flex;
         justify-content: space-between;
         color: white;
@@ -177,6 +166,7 @@ header {
 
     .coffee p {
         margin-top: 10px;
+        color: white;
     }
 
     .coffee .price {
@@ -190,44 +180,6 @@ header {
         margin-top: 10px;
         cursor: pointer;
     }
-   
-     /* .About {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 30px;
-    }
-
-    .coffee {
-        position: relative;
-        width: 300px;
-        text-align: center;
-        overflow: hidden;
-    }
-
-    .coffee img {
-        border-radius: 15px;
-        margin-top: 15%;
-        width: 100%;
-        height: 60vh;
-    }
-
-    .coffee h1,
-    .coffee p {
-        position: absolute;
-        bottom: -100%;
-        width: 100%;
-        padding: 10px;
-        background-color: rgba(0, 0, 0, 0.8);
-        color: white;
-        transition: bottom 0.3s ease;
-    }
-
-    .coffee:hover h1,
-    .coffee:hover p {
-        bottom: 0;
-    } 
- */
 
  .img-container {
      position: relative;
@@ -320,5 +272,90 @@ header {
 
 
 
+ 
+
+  .home-about {
+    background-image: url(img/COffee.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    text-align: center;
+}
+
+.about h1 {
+    font-size: 32px;
+    margin-bottom: 15px;
+    margin-left: 11em;
+}
+
+.about p {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 12px;
+    margin-left: 21em;
+}
   
-  
+
+
+
+@media screen and (max-width: 768px) {
+    .text {
+        padding: 20px;
+        margin-right: 0;
+    }
+    
+    .about h1 {
+        margin-left: 0;
+    }
+    
+    .about p {
+        margin-left: 0;
+    }
+    
+    .home-about {
+        height: auto;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    /* CSS code for smaller screens */
+    .text {
+        margin-right: 0;
+    }
+
+    .nav {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .nav li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .icon {
+        margin-left: 0;
+        margin-right: 10px;
+    }
+
+    .home {
+        background-position: center top;
+    }
+}
+
+
+
+@media (max-width: 768px) {
+    .main {
+        grid-template-columns: 1fr;
+        margin-left: 10%;
+    }
+}
+
