--- a/style.css
+++ b/style.css
@@ -1,66 +1,63 @@
-body{
-    background-color: #371f1f;
+
+*{
+    margin: 0px;
+    padding: 0px;
 }
 
-    .home{
-        background-image: url(img/coffee4.cms);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center top -12em;
-    
-    }
+        .home {
+            background-image: url(img/coffee4.cms);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center bottom -0em;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
+        .head {
+            background-color: #706a6a;
+            color: #fff;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            gap: 20%;
+            margin-bottom: 45%;
+            
+        }
+        
+        .logo img {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+            border-radius: 50%;
+        }
+        
+        .nav {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 80%;
+           
+        
+        }
+        
+        .nav li {
+            margin-right: 20px;
+            font-size: 300%;
+            /* margin-top: 60%; */
 
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2px;
-    background-color: #310202;
-    color: aliceblue;
-}
+        }
+        
+        .nav li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 60%;
 
-.logo img {
-    width: 100px; /* Adjust the width as needed */
-    border-radius: 68%;
-    
-}
+        }
 
-.nav {
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    gap: 35%;
-    color: #fff;
-}
-
-.nav li {
-    margin-right: 10px;
-}
-
-.nav li:last-child {
-    margin-right: 0;
-}
-
-.icon {
-    display: flex;
-    align-items: center;
-}
-
-.icon i {
-    margin-left: 10px;
-}
-.nav li:hover{
-    background: rgb(195, 102, 102);
-    /* border-radius: 0.2rem; */
-    transition: 0.2s all linear;
-}
-.icon{
-    font-size: 22px;
-    cursor: pointer;
-    z-index: 10000;
-}
+       
 
     .text {
         text-align: center;
@@ -128,151 +125,13 @@ header {
 
 
     /* about section */
-    .About {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    .coffee {
-        position: relative;
-        width: 300px;
-        margin-bottom: 20px;
-        text-align: center;
-        overflow: hidden;
-    }
-
-    .coffee img {
-        width: 100%;
-        height: auto;
-
-    } 
- 
- .img-container {
-     position: relative;
    
-  }
-  
-    .coffee h1 {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 10px;
-        background-color: rgba(0, 0, 0, 0.7);
-        color: #fff;
-        margin: 0;
-    }
-
-    .coffee p {
-        margin-top: 10px;
-        color: white;
-    }
-
-    .coffee .price {
-        margin-top: auto;
-        margin-bottom: 10px;
-    }
-    .coffee .toggle-btn {
-        background-color: #ddd;
-        border: none;
-        padding: 5px 10px;
-        margin-top: 10px;
-        cursor: pointer;
-    }
-
- .img-container {
-     position: relative;
-   
-  }
-  
-  .img-container img {
-    display: block;
-    width: 100%;
-    height: 50vh;
-   
-  }
-  
-  .price {
-    position: absolute;
-    bottom: 45px;
-    text-align: center;
-    left: 55px;
-    font-size: 1rem;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-  }
-  
-  .btn-container {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-  }
-  
-  .btn {
-    display: inline-block;
-    margin-right: 25px;
-    gap: 20rem;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    font-weight: bold;
-    color: #fff;
-    background-color:  #e67e22;
-    text-decoration: none;
-  }
-  
-  .order-btn:hover,
-  .cart-btn:hover {
-    background-color: #000;
-  }
- .main{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
- }
-
- *{
-    margin: 0px;
-    padding: 0px;
-}
-.customer{
-    padding: 2%;
-    margin-left: 30%;
-    font-size: 25px;
-}
-.person1{
-  background-color: rgb(238, 238, 238);
-  box-shadow: 2px 20px 3px rgb(225, 225, 225);
-}
-.person2{
-  background-color: rgb(238, 238, 238);
-  box-shadow: 2px 20px 3px rgb(225, 225, 225); 
-} 
-.person3{
-  background-color: rgb(238, 238, 238);
-  box-shadow: 2px 20px 3px rgb(225, 225, 225);
-}
-.reviews{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    padding: 5%;
-    text-align: center;
-    font-size: 20px;
-    gap: 2rem;
-   
-}
-.reviews img{
-    border-radius: 10px;
-    height: 40vh;
-    width: 60%;
-    margin-top: 2%;
-    padding: auto;
-}
 
 
 
- 
+
+
+/*  
 
   .home-about {
     background-image: url(img/COffee.webp);
@@ -300,7 +159,7 @@ header {
     margin-bottom: 12px;
     margin-left: 21em;
 }
-  
+   */
 
 
 
