--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
             margin-bottom: 47%;
             
             
+            
         }
         
         .logo img {
@@ -38,20 +39,21 @@
             margin: 0;
             padding: 0;
             display: flex;
-            gap: 80%;
+            gap:       53%;
 
            
         
         }
         
         .nav li {
-            margin-right: 20px;
+            /* margin-right: 20px; */
+            margin-left: 3%;
             font-size: 300%;
 
         }
         
         .nav li a {
-            color: #fff;
+            color: #eedad8;
             text-decoration: none;
             font-size: 60%;
 
@@ -60,21 +62,35 @@
        
 
     .text {
-        text-align: center;
+        /* text-align: center;
         color: white;
-        padding: 50px;
-        margin-right: 45%;
-    }
+        padding: 5px;
+        margin-right: 55%; */
+        position: relative;
+        text-align: center;
+        /* text-align: right; */
+        background-color: #f2f2f2;
+        padding: 20px;
+        right: 450px; /* Adjust the left position value as needed */
+        max-width: 600px; /* Optional: Set a maximum width for the element */
+        }
 
     .text h1 {
-        font-size: 36px;
-        margin-bottom: 20px;
+        /* font-size: 36px;
+        margin-bottom: 20px; */
+        color: #333;
+        font-size: 24px;
+        margin-bottom: 10px;
+
         
     }
 
     .text p {
-        font-size: 18px;
-        margin-bottom: 30px;
+        /* font-size: 18px;
+        margin-bottom: 30px; */
+        color: #666;
+        font-size: 16px;
+        margin-bottom: 20px;
     }
 
     .btn {
@@ -106,7 +122,7 @@
 
     .footer div {
         flex: 1;
-        margin-right: 30px;
+        margin-left: 90px;
     }
 
     .footer h3 {
